@@ -115,6 +115,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #15381: Optimized line reading in io.BytesIO.
+
 - Issue #20729: Restored the use of lazy iterkeys()/itervalues()/iteritems()
   in the mailbox module.
 
